fixed log in button align

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1829,4 +1829,6 @@ p#opinionContent{
 #map {
     height: 100%;
 }
-
+.margin_left{
+    margin-left: 41%;
+}
